Changelog
=========

### v1.0.0-beta1 - ToBeReleased

* More documentation for the `run` command - Fixed #79
* Rewrite API client package, remove unsage code - Fixed #80
* Allow environment variable name or value for `db-tunnel` as argument
* Extended help for `db-tunnel` - Fixed #85
* Ctrl^C doesn't kill an `run` command anymore - Fixed #83
* --app flag can be written everywhere in the command line - Fixed #10
* Use SSH agent if possible to get SSH credentials
* Correcty handle encrypted SSH keys (AES-CBC and DES-ECE2) - Fixed #76, #77

### v1.0.0-alpha4 - 22/01/2014

* Rename `Processes` to `Containers` to fit the API
* `new-command`: `login` command
* `logout`: Clean credentials deletion for multiple APIs (dev feature)
* `logs`: Do not encode HTML entities (logs server don't escape html entities anymore)
* `addons-*`: Adapt to new addons API endpoints
* `domains-*`: Adapt to new domains API endpoints
* `db-tunnel`: Handle encrypted SSH key

### v1.0.0-alpha3 - 21/12/2014

* Fix credential storage issue #72 #73
* Fix wrong help for command db-tunnel #74
* Fix logfile open operation on MacOS #70
* Build Windows version on Windows with CGO #71
* Build Mac OS verison on Mac OS with CGO #71

### v1.0.0-alpha2 - 15/12/2014

* Move addons subcommands at top level for better visibility

### v1.0.0-alpha1 - 14/12/2014

* Initial release
* Opensourcing of the project