@@ -3,6 +3,7 @@ Changelog
 
 ### v1.0.0-beta1 - ToBeReleased
 
+* Correctly handle 404 Error, display clearer messages
 * More documentation for the `run` command - Fixed #79
 * Rewrite API client package, remove unsage code - Fixed #80
 * Allow environment variable name or value for `db-tunnel` as argument
